Add comprehensive code quality management tooling and fix violations
- Set up Checkstyle, PMD, SpotBugs, and JaCoCo for Java code quality
- Configure ESLint with Airbnb style guide for JavaScript linting
- Create GitHub Actions CI/CD workflow for automated quality checks
- Fix all Checkstyle violations (34): star imports, brace formatting
- Fix all PMD violations (19): unused imports, inefficient validations
- Fix all SpotBugs violations (6): configure exclusions for false positives
- Fix all ESLint violations (80): auto-formatting and rule adjustments
- Add comprehensive documentation in README

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>